fix(pipeline-sv): update ticket, update pipeline name